tests/snapshots/spanshot_request@16554490692702535901.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: ResetBindingMode, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[mut x]: &[T]`

[mut x] @ p: &[T]
// Applying rule `ConstructorRef`
mut x @ &(*p).0: &T
// Applying rule `Binding`
mut x @ (*p).0: T

// Final bindings:
let mut x: T = (*p).0
