tests/snapshots/spanshot_request@16626470682407446193.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[&mut x]: &[&mut T]`

[&mut x] @ p: &[&mut T]
// Applying rule `ConstructorRef`
&mut x @ &(*p).0: &&mut T
// ERROR: no rules applies to &mut x @ &(*p).0: &&mut T
