tests/snapshots/spanshot_request@16884998215904722766.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: Skip, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[ref mut x]: &[T]`

[ref mut x] @ p: &[T]
// Applying rule `ConstructorRef`
ref mut x @ &(*p).0: &T
// Applying rule `Binding`
x @ &mut (*p).0: &mut T

// Final bindings:
let x: &mut T = &mut (*p).0
